# skde-aggregator

./: .gitignore  Cargo.toml  README.md
benches/: README.md  agg_commit.rs  aggregate.rs  aggregate_with_hash.rs
src/: lib.rs
src/aggregate/: chip.rs  instructions.rs  mod.rs
src/aggregate_with_hash/: chip.rs  instructions.rs  mod.rs
src/big_integer/: chip.rs  instructions.rs  mod.rs
src/hash/: chip.rs
src/maingate/: instructions.rs  main_gate.rs  mod.rs  range.rs
src/poseidon/: chip.rs  grain.rs  matrix.rs  mod.rs  permutation.rs  poseidon.rs  spec.rs
