[package]
name = "skde-aggregator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Halo2
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2022_09_10" }
rand = "0.8.5"
# Big-integer
num-traits = "0.2"
num-bigint = { version = "0.4", features = ["rand"] }
num-integer = "0.1"
ff = "0.13"
group = "0.13"
subtle = { version = "2.3", default-features = false }
# Feature
bitvec = "1"
rand_core = { version = "0.6", default-features = false }

[patch."https://github.com/privacy-scaling-explorations/halo2.git"]
halo2_proofs = { git = "https://github.com/scroll-tech/halo2.git", branch = "v1.0" }

[dev-dependencies]
rand = "0.8.5"
rand_core = { version = "0.6", default-features = false }
rsa = "0.6.1"
sha2 = "0.10.6"
paste = "1.0.7"
proptest = "1.0.0"  #proptest = {version = "1.0.0", optional = true}
uint = "0.9.2"  # MSRV 1.56.2 ??
criterion = { version = "0.3", features = ["html_reports"] }

[lib]
doctest = false
bench = false

[[bench]]
name = "aggregate"
harness = false

